# DawnStorm-TextAdventure

./: Cargo.toml  flake.nix
data/: map.dot
data/map/: castle_path.json  main.json
dawnstorm-core/: Cargo.toml
dawnstorm-core/src/: dataload.rs  defaults.rs  entity.rs  item.rs  lib.rs  load_methods.rs  profession.rs  savegame.rs  syscall.rs  world.rs
dawnstorm-textfront/: Cargo.toml
dawnstorm-textfront/src/: create_character.rs  main.rs  parser.rs
dawnstorm-textfront/src/parser/: search.rs  sysexec.rs
