[package]
name = "dawnstorm-core"
version = "0.2.0"
authors = ["Michal Atlas <michal.z.atlas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.14"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
toml = "0.5.8"

[features]
default_gen = []

