[package]
name = "dawnstorm-textfront"
version = "0.1.0"
authors = ["Michal Atlas <michal.z.atlas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
dawnstorm-core = { version = "0.2.0", path = "../dawnstorm-core", features = ["default_gen"] }
